<resources>
    <string name="app_name">Karakana</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_username_hint">User Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btnlogin_label">LOGIN</string>
    <string name="reg_first_name_hint">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_hint">SIGN UP</string>
    <string name="app_moto">Advancement Through Technology</string>
    <string name="app_name_login">KARAKANA</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDXl8snACSy8BkNk8wUKtQWdZbwuoH6Rtk</string>
</resources>
