<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/app_bkg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/linearlayout_mainpadding">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/login_username_hint"
                android:drawableStart="@drawable/ic_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            app:passwordToggleContentDescription="Show Password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint"
                android:drawableStart="@drawable/ic_password"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:layout_marginTop="10dp"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/login_btnlogin_label"/>
    </LinearLayout>

</ScrollView>