<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Design.AppBarLayout">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/profile_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#0069FF"
                android:elevation="8dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:background="@drawable/userprof"
                    android:padding="16dp"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_account"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp"/>
                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Jabez Magomere"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/ubuntu_bold"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="jaybezdon@gmail.com"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/ubuntu_bold"
                        />
                </LinearLayout>
            </android.support.design.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/linearlayout_mainpadding">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etProfileFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/reg_first_name_hint"
                    android:drawableStart="@drawable/ic_username"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etProfileLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/last_name"
                    android:drawableStart="@drawable/ic_username"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_userName"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etProfileUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/login_username_hint"
                    android:drawableStart="@drawable/ic_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etProfilePhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone_number_hint"
                    android:drawableStart="@drawable/ic_phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:drawableStart="@drawable/ic_mail_black_24dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:layout_marginTop="10dp"
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                style="@style/Widget.MaterialComponents.Button"
                android:text="SAVE"/>
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
